fix scrollbar

--- a/src/containers/HomePage/Section/Footer.scss
+++ b/src/containers/HomePage/Section/Footer.scss
@@ -107,3 +107,9 @@
 		}
 	}
 }
+
+.null-navigation {
+	background-color: #262626;
+	height: 65px;
+	width: 100%;
+}
